New OpenAPI spec
