# server/main.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-07-18T00:31:27+00:00
+#   timestamp: 2024-07-19T00:39:22+00:00
 
 from __future__ import annotations
 
@@ -8,7 +8,14 @@ from typing import Optional
 
 from fastapi import FastAPI
 
-from .models import Task, TasksNamePutRequest, TasksPostRequest, UsersNamePostResponse
+from .models import (
+    Credentials,
+    Task,
+    TasksNamePutRequest,
+    TasksPostRequest,
+    UsersNamePostRequest,
+    UsersNamePostResponse,
+)
 
 app = FastAPI(
     title='Supervisor Server API',
@@ -17,7 +24,7 @@ app = FastAPI(
 
 
 @app.post('/tasks', response_model=None)
-def run_create_task(id: str, key: str = ..., body: TasksPostRequest = ...) -> None:
+def run_create_task(body: TasksPostRequest) -> None:
     """
     Create a new task
     """
@@ -26,12 +33,12 @@ def run_create_task(id: str, key: str = ..., body: TasksPostRequest = ...) -> No
 
 @app.get('/tasks', response_model=None)
 def run_read_tasks(
-    search: Optional[str] = None,
+    pattern: Optional[str] = None,
     limit: Optional[int] = None,
     offset: Optional[int] = None,
 ) -> None:
     """
-    Get all tasks
+    Get tasks
     """
     pass
 
@@ -45,9 +52,7 @@ def run_read_task(name: str) -> Task:
 
 
 @app.put('/tasks/{name}', response_model=None)
-def run_update_task(
-    id: str, key: str = ..., name: str = ..., body: TasksNamePutRequest = ...
-) -> None:
+def run_update_task(name: str, body: TasksNamePutRequest = ...) -> None:
     """
     Update data of a task
     """
@@ -55,7 +60,7 @@ def run_update_task(
 
 
 @app.delete('/tasks/{name}', response_model=None)
-def run_delete_task(id: str, key: str = ..., name: str = ...) -> None:
+def run_delete_task(name: str, body: Credentials = ...) -> None:
     """
     Delete a task
     """
@@ -73,7 +78,7 @@ def run_read_queue(
 
 
 @app.put('/tasks/{name}/queue', response_model=None)
-def run_join_queue(id: str, key: str = ..., name: str = ...) -> None:
+def run_join_queue(name: str, body: Credentials = ...) -> None:
     """
     Join the queue
     """
@@ -81,7 +86,7 @@ def run_join_queue(id: str, key: str = ..., name: str = ...) -> None:
 
 
 @app.delete('/tasks/{name}/queue', response_model=None)
-def run_leave_queue(id: str, key: str = ..., name: str = ...) -> None:
+def run_leave_queue(name: str, body: Credentials = ...) -> None:
     """
     Dequeue yourself from the queue
     """
@@ -89,7 +94,9 @@ def run_leave_queue(id: str, key: str = ..., name: str = ...) -> None:
 
 
 @app.post('/users/{name}', response_model=UsersNamePostResponse)
-def run_create_user(name: str, link: Optional[str] = None) -> UsersNamePostResponse:
+def run_create_user(
+    name: str, body: UsersNamePostRequest = None
+) -> UsersNamePostResponse:
     """
     Create a new user
     """
