# server/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
-#   filename:  openapi.yaml
-#   timestamp: 2024-07-18T00:31:27+00:00
+#   filename:  db\openapi.yaml
+#   timestamp: 2024-07-19T00:39:22+00:00
 
 from __future__ import annotations
 
@@ -27,13 +27,24 @@ class User(BaseModel):
     url: Optional[AnyUrl] = None
 
 
+class Credentials(BaseModel):
+    id: Optional[str] = None
+    key: Optional[str] = None
+
+
 class TasksPostRequest(BaseModel):
-    name: str = ''
-    description: Optional[str] = 'No description'
+    name: Optional[str] = None
+    description: Optional[str] = None
+    credentials: Optional[Credentials] = None
 
 
 class TasksNamePutRequest(BaseModel):
     data: Optional[str] = None
+    credentials: Optional[Credentials] = None
+
+
+class UsersNamePostRequest(BaseModel):
+    link: Optional[str] = None
 
 
 class UsersNamePostResponse(BaseModel):
